--- a/ted.html
+++ b/ted.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>notre site</title>
   </head>
   <body>
-    bonjour à tous
+    <p>bonjour à tous</p>
+
+    <div>salut à tous</div>
   </body>
 </html>
